discord fix error when price is selected